problemas con animaciones solucionados falta responsibe

--- a/SASS/_header.scss
+++ b/SASS/_header.scss
@@ -15,7 +15,9 @@
             width: 40%;
         }
 
-        .nav-lavel, .nav-imput{
+        .nav-label, 
+        
+        .nav-imput{
             display: none;}
 
        
