--- a/SASS/_header.scss
+++ b/SASS/_header.scss
@@ -15,10 +15,9 @@
             width: 40%;
         }
 
-        .nav-label, 
-        
-        .nav-imput{
-            display: none;}
+        label, .nav-input {
+            display: none;
+        }
 
        
         #nav-bar ul{
