--- a/SASS/main.css
+++ b/SASS/main.css
@@ -71,4 +71,91 @@
     transition: clip-path 1s ease-in-out;
     transition: clip-path 1s ease-in-out, -webkit-clip-path 1s ease-in-out;
   }
+}
+/*-------------------FOOTER---------------*/
+@media (max-width: 768px) {
+  #footer {
+    background-color: #FAE1DC;
+    display: flex;
+    flex-direction: column;
+  }
+  #footer .footer-conteiner-conteiner {
+    display: flex;
+    flex-direction: column;
+  }
+  #footer .footer-conteiner-conteiner .footer-conteiner {
+    align-items: center;
+  }
+  #footer .footer-conteiner-conteiner .footer-conteiner .footer-contact {
+    margin-bottom: 10px;
+    text-align: center;
+  }
+  #footer .footer-conteiner-conteiner .footer-conteiner .footer-contact-text {
+    font-family: "Dancing Script", cursive;
+    font-weight: 700;
+  }
+  #footer .footer-conteiner-conteiner .footer-conteiner .footer-social {
+    margin: 15px 10px;
+  }
+  #footer .footer-conteiner-conteiner .footer-conteiner .footer-social .footer-icon {
+    border: 1px solid black;
+    border-radius: 50%;
+    width: 50px;
+    height: auto;
+    margin: 5px;
+  }
+  #footer .footer-conteiner-conteiner .footer-conteiner .footer-social .footer__icon--facebook:hover {
+    transform: scale(1.2);
+  }
+  #footer .footer-conteiner-conteiner .footer-conteiner .footer-social .footer__icon--instagram:hover {
+    transform: scale(1.2);
+  }
+  #footer .footer-image-img {
+    display: none;
+  }
+  #footer .footer-copyright {
+    display: flex;
+    justify-content: center;
+  }
+}
+#footer {
+  background-color: #FAE1DC;
+  display: flex;
+  flex-direction: column;
+}
+#footer .footer-conteiner-conteiner {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+#footer .footer-conteiner-conteiner .footer-conteiner {
+  align-items: center;
+}
+#footer .footer-conteiner-conteiner .footer-conteiner .footer-contact {
+  margin-bottom: 10px;
+  text-align: center;
+}
+#footer .footer-conteiner-conteiner .footer-conteiner .footer-contact-text {
+  font-family: "Dancing Script", cursive;
+  font-weight: 700;
+}
+#footer .footer-conteiner-conteiner .footer-conteiner .footer-social {
+  margin: 15px 10px;
+}
+#footer .footer-conteiner-conteiner .footer-conteiner .footer-social .footer-icon {
+  border: 1px solid black;
+  border-radius: 50%;
+  width: 50px;
+  height: auto;
+  margin: 5px;
+}
+#footer .footer-conteiner-conteiner .footer-conteiner .footer-social .footer__icon--facebook:hover {
+  transform: scale(1.2);
+}
+#footer .footer-conteiner-conteiner .footer-conteiner .footer-social .footer__icon--instagram:hover {
+  transform: scale(1.2);
+}
+#footer .footer-copyright {
+  display: flex;
+  justify-content: center;
 }/*# sourceMappingURL=main.css.map */
