--- a/SASS/main.css
+++ b/SASS/main.css
@@ -158,4 +158,66 @@
 #footer .footer-copyright {
   display: flex;
   justify-content: center;
+}
+
+main .cart-container {
+  margin: 10px 30px;
+}
+main .cart-container #card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 5%, 10%;
+  padding: 110px;
+  gap: 12px;
+  transition: gap 200ms;
+}
+main .cart-container #card:hover {
+  gap: 24px;
+}
+main .cart-container #card img {
+  width: 150px;
+  border-radius: 50%;
+}
+main .cart-container #card .romiPresentation {
+  text-align: center;
+  font-family: "Dancing Script", cursive;
+  font-weight: 700;
+}
+main .productosDestacados-conteiner-conteiner #outstanding .titule {
+  margin: 20px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+main .productosDestacados-conteiner-conteiner #outstanding .card-conteiner-conteiner .card-conteiner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+main .productosDestacados-conteiner-conteiner #outstanding .card-conteiner-conteiner .card-conteiner .card-product {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  align-items: center;
+}
+main .productosDestacados-conteiner-conteiner #outstanding .card-conteiner-conteiner .card-conteiner .card-product .card-product-img {
+  display: grid;
+  grid-row: 1fr;
+  grid-column: 1fr;
+  justify-items: center;
+  align-items: center;
+}
+main .productosDestacados-conteiner-conteiner #outstanding .card-conteiner-conteiner .card-conteiner .card-product .card-product-img .card-img {
+  width: 30%;
+  height: auto;
+  border-radius: 50%;
+  border: #FAE1DC solid 5px;
+  justify-items: center;
+  align-items: center;
+}
+main .productosDestacados-conteiner-conteiner #outstanding .card-conteiner-conteiner .card-conteiner .card-product .card-product-content {
+  text-align: center;
 }/*# sourceMappingURL=main.css.map */
