--- a/SASS/main.css
+++ b/SASS/main.css
@@ -1,3 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Dancing Script", cursive;
+  font-family: "Playfair Display", serif;
+}
+
 #hero {
   /*position: fixed;*/
   margin-top: 0;
@@ -220,4 +227,55 @@ main .productosDestacados-conteiner-conteiner #outstanding .card-conteiner-conte
 }
 main .productosDestacados-conteiner-conteiner #outstanding .card-conteiner-conteiner .card-conteiner .card-product .card-product-content {
   text-align: center;
+}
+
+.main .title {
+  text-align: center;
+  margin: 20px;
+}
+.main .title-text {
+  font-family: "Dancing Script", cursive;
+  font-weight: 700;
+  text-align: center;
+  margin: 20px;
+}
+.main .gallery {
+  padding-top: 20px;
+  padding-bottom: 10px;
+  margin: 20px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: auto;
+  justify-items: center;
+  gap: 50px;
+}
+.main .gallery .gallery__picture {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  background-color: #fff;
+  border: 10px solid #fff;
+  border-bottom: 60px solid #fff;
+  box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.7);
+  border-radius: 8px;
+}
+.main .gallery .gallery__picture:hover {
+  transform: scale(1.1) rotate(5deg);
+  transition: 0.7s;
+}
+.main .gallery .gallery__picture img {
+  width: 60%;
+  height: auto;
+}
+.main .gallery .galery__picture--p2:hover {
+  transform: scale(1.1) rotate(-5deg);
+  transition: 0.7s;
+}
+.main .gallery .galery__picture--p5:hover {
+  transform: scale(1.1) rotate(-5deg);
+  transition: 0.7s;
+}
+.main .gallery .galery__picture--p8:hover {
+  transform: scale(1.1) rotate(-5deg);
+  transition: 0.7s;
 }/*# sourceMappingURL=main.css.map */
