--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -1,7 +1,16 @@
 $mainColor: #FAE1DC;
 $bodyColor: #D9D9DD;
 
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Dancing Script', cursive;
+    font-family: 'Playfair Display', serif;
+   
+}
+
 @import "header";
 @import "responsive";
 @import "footer";
 @import "home";
+@import "client";
