--- a/SASS/_footer.scss
+++ b/SASS/_footer.scss
@@ -16,7 +16,7 @@
                 margin-bottom: 10px;
                 text-align: center;
     
-                &-text{
+                .footer-text{
                     font-family: 'Dancing Script', cursive;
                     font-weight: 700;
                 }
