--- a/SASS/main.css
+++ b/SASS/main.css
@@ -52,79 +52,6 @@
   --clippy: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 
-@media (max-width: 768px) {
-  #hero .nav-lavel {
-    display: block;
-    cursor: pointer;
-  }
-  #hero .nav-input:checked + #nav-bar ul {
-    -webkit-clip-path: circle(100% at center);
-            clip-path: circle(100% at center);
-  }
-  #hero #nav-bar ul {
-    position: fixed;
-    top: 80px;
-    bottom: 0;
-    background: #D9D9DD;
-    left: 0;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    -webkit-clip-path: circle(0 at center);
-            clip-path: circle(0 at center);
-    transition: -webkit-clip-path 1s ease-in-out;
-    transition: clip-path 1s ease-in-out;
-    transition: clip-path 1s ease-in-out, -webkit-clip-path 1s ease-in-out;
-  }
-}
-/*-------------------FOOTER---------------*/
-@media (max-width: 768px) {
-  #footer {
-    background-color: #FAE1DC;
-    display: flex;
-    flex-direction: column;
-  }
-  #footer .footer-conteiner-conteiner {
-    display: flex;
-    flex-direction: column;
-  }
-  #footer .footer-conteiner-conteiner .footer-conteiner {
-    align-items: center;
-  }
-  #footer .footer-conteiner-conteiner .footer-conteiner .footer-contact {
-    margin-bottom: 10px;
-    text-align: center;
-  }
-  #footer .footer-conteiner-conteiner .footer-conteiner .footer-contact-text {
-    font-family: "Dancing Script", cursive;
-    font-weight: 700;
-  }
-  #footer .footer-conteiner-conteiner .footer-conteiner .footer-social {
-    margin: 15px 10px;
-  }
-  #footer .footer-conteiner-conteiner .footer-conteiner .footer-social .footer-icon {
-    border: 1px solid black;
-    border-radius: 50%;
-    width: 50px;
-    height: auto;
-    margin: 5px;
-  }
-  #footer .footer-conteiner-conteiner .footer-conteiner .footer-social .footer__icon--facebook:hover {
-    transform: scale(1.2);
-  }
-  #footer .footer-conteiner-conteiner .footer-conteiner .footer-social .footer__icon--instagram:hover {
-    transform: scale(1.2);
-  }
-  #footer .footer-image-img {
-    display: none;
-  }
-  #footer .footer-copyright {
-    display: flex;
-    justify-content: center;
-  }
-}
 #footer {
   background-color: #FAE1DC;
   display: flex;
@@ -167,10 +94,10 @@
   justify-content: center;
 }
 
-main .cart-container {
+main .card-container {
   margin: 10px 30px;
 }
-main .cart-container #card {
+main .card-container #card {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -180,14 +107,14 @@ main .cart-container #card {
   gap: 12px;
   transition: gap 200ms;
 }
-main .cart-container #card:hover {
+main .card-container #card:hover {
   gap: 24px;
 }
-main .cart-container #card img {
+main .card-container #card img {
   width: 150px;
   border-radius: 50%;
 }
-main .cart-container #card .romiPresentation {
+main .card-container #card .romiPresentation {
   text-align: center;
   font-family: "Dancing Script", cursive;
   font-weight: 700;
@@ -317,4 +244,102 @@ main .productosDestacados-conteiner-conteiner #outstanding .card-conteiner-conte
   align-items: center;
   position: relative;
   z-index: -100;
+}
+
+@media (max-width: 768px) {
+  #hero .nav-lavel {
+    display: block;
+    cursor: pointer;
+  }
+  #hero .nav-input:checked + #nav-bar ul {
+    -webkit-clip-path: circle(100% at center);
+            clip-path: circle(100% at center);
+  }
+  #hero #nav-bar ul {
+    position: fixed;
+    top: 80px;
+    bottom: 0;
+    background: #D9D9DD;
+    left: 0;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    -webkit-clip-path: circle(0 at center);
+            clip-path: circle(0 at center);
+    transition: -webkit-clip-path 1s ease-in-out;
+    transition: clip-path 1s ease-in-out;
+    transition: clip-path 1s ease-in-out, -webkit-clip-path 1s ease-in-out;
+  }
+}
+/*-------------------HOME-----------------*/
+@media (max-width: 600px) {
+  .card-container, #card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 5%, 10%;
+    padding: 10px;
+    gap: 12px;
+    transition: gap 200ms;
+  }
+  .productosDestacados-conteiner-conteiner #outstanding .card-conteiner-conteiner .card-container {
+    display: flex;
+    flex-direction: column;
+  }
+}
+/*---------------Clientes----------------*/
+@media (max-width: 768px) {
+  .main .gallery {
+    grid-template-columns: 1fr;
+  }
+}
+/*-------------------FOOTER---------------*/
+@media (max-width: 768px) {
+  #footer {
+    background-color: #FAE1DC;
+    display: flex;
+    flex-direction: column;
+  }
+  #footer .footer-conteiner-conteiner {
+    display: flex;
+    flex-direction: column;
+  }
+  #footer .footer-conteiner-conteiner .footer-conteiner {
+    align-items: center;
+  }
+  #footer .footer-conteiner-conteiner .footer-conteiner .footer-contact {
+    margin-bottom: 10px;
+    text-align: center;
+  }
+  #footer .footer-conteiner-conteiner .footer-conteiner .footer-contact-text {
+    font-family: "Dancing Script", cursive;
+    font-weight: 700;
+  }
+  #footer .footer-conteiner-conteiner .footer-conteiner .footer-social {
+    margin: 15px 10px;
+    align-items: center;
+  }
+  #footer .footer-conteiner-conteiner .footer-conteiner .footer-social .footer-icon {
+    border: 1px solid black;
+    border-radius: 50%;
+    width: 50px;
+    height: auto;
+    margin: 5px;
+  }
+  #footer .footer-conteiner-conteiner .footer-conteiner .footer-social .footer__icon--facebook:hover {
+    transform: scale(1.2);
+  }
+  #footer .footer-conteiner-conteiner .footer-conteiner .footer-social .footer__icon--instagram:hover {
+    transform: scale(1.2);
+  }
+  #footer .footer-image .footer-img {
+    display: none;
+  }
+  #footer .footer-copyright {
+    display: flex;
+    justify-content: center;
+  }
 }/*# sourceMappingURL=main.css.map */
