--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -10,8 +10,16 @@ $bodyColor: #D9D9DD;
 }
 
 @import "header";
-@import "responsive";
 @import "footer";
 @import "home";
 @import "client";
 @import "empresa";
+@import "contacto";
+@import "responsive";
+
+
+
+
+
+
+
